Movie, scaffold up to Add a Model.Initial migration

--- a/RazorPagesMovie/appsettings.json
+++ b/RazorPagesMovie/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RazorPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RazorPagesMovieContext-f9dc36d5-29a3-47bc-bd8c-212a2e1cab34;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
